--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/images/wencorp2.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d4a574" />
     <meta
       name="description"
       content="WENCORP Archives - Classified DJ Mix Transmissions"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/wencorp2.PNG" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>WENCORP Archives</title>
   </head>
